# ocaml-capstone

./: README.md  capstone.opam  conf-capstone.opam  conf-capstone.opam.template  dune-project
.github/workflows/: capstone-version-check.yml  ci.yml
config/: discover.ml
doc/: dune  faq.mld  index.mld
generator/: dune  gen.ml
lib/: aarch64.ml  arm.ml  capstone.ml  capstone.mli  dune  m680x.ml  m68k.ml  mips.ml  ppc.ml  riscv.ml  sparc.ml  sysz.ml  x86.ml
lib/ffi/: aarch64_types.ml  arm_types.ml  bindings.ml  capstone_stubs.c  dune  m680x_types.ml  m68k_types.ml  mips_types.ml  ppc_types.ml  riscv_types.ml  sparc_types.ml  sysz_types.ml  types.ml  x86_types.ml
support/: gen.ml
test/: dune  test_capstone.ml
