(library
 (name capstone)
 (public_name capstone)
 (libraries capstone_ffi ctypes)
 (modules capstone aarch64 arm x86 riscv ppc sysz sparc cs_const aarch64_const arm_const x86_const riscv_const ppc_const sysz_const sparc_const))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ../config/discover.exe)))

; Generate constants using the new generator
(rule
 (targets cs_const.ml aarch64_const.ml arm_const.ml x86_const.ml riscv_const.ml ppc_const.ml sysz_const.ml sparc_const.ml)
 (deps (:gen ../generator/gen.exe))
 (action (run %{gen} .)))
