(library
 (name capstone_ffi)
 (public_name capstone.ffi)
 (modules types bindings aarch64_types arm_types x86_types riscv_types ppc_types sysz_types)
 (libraries ctypes ctypes-foreign)
 (foreign_stubs
  (language c)
  (names capstone_stubs)
  (flags (:include ../c_flags.sexp)))
 (c_library_flags (:include ../c_library_flags.sexp)))
